--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -14,7 +14,7 @@
         android:id="@+id/buyPass"
         android:layout_width="140dp"
         android:layout_height="170dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="270dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="25dp"
@@ -29,7 +29,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:padding="10dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:src="@drawable/buy"/>
 
             <TextView
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
 
                 android:gravity="center"
-                android:text="Bus Pass"/>
+                android:text="@string/bus_pass1"/>
 
             <View
                 android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Buy your Bus Pass here"
+                android:text="@string/buy_your_bus_pass_here"
                 android:padding="5dp"/>
 
 
@@ -61,7 +61,7 @@
         android:id="@+id/transactions"
         android:layout_width="140dp"
         android:layout_height="170dp"
-        android:layout_marginLeft="240dp"
+        android:layout_marginStart="240dp"
         android:layout_marginTop="270dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="25dp"
@@ -75,14 +75,14 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:padding="10dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:src="@drawable/dollar"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:text="My Transactions" />
+                android:layout_marginStart="18dp"
+                android:text="@string/my_transactions" />
 
             <View
                 android:layout_width="match_parent"
@@ -94,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="My Transaction history"
+                android:text="@string/my_transaction_history"
                 android:padding="5dp"/>
 
 
@@ -107,7 +107,7 @@
         android:id="@+id/reminder"
         android:layout_width="140dp"
         android:layout_height="170dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="470dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="25dp"
@@ -121,14 +121,14 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:padding="10dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:src="@drawable/ic_event_available_black_24dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:text="Reminde Me" />
+                android:layout_marginStart="30dp"
+                android:text="@string/remind_me" />
 
             <View
                 android:layout_width="match_parent"
@@ -140,7 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Remind me about bus time"
+                android:text="@string/remind_me_about_bus_time"
                 android:padding="5dp"/>
 
 
@@ -153,7 +153,7 @@
         android:id="@+id/button_call"
         android:layout_width="140dp"
         android:layout_height="170dp"
-        android:layout_marginLeft="240dp"
+        android:layout_marginStart="240dp"
         android:layout_marginTop="470dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="25dp"
@@ -168,14 +168,14 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:padding="10dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:src="@drawable/call"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="Call Main Gate" />
+                android:layout_marginStart="20dp"
+                android:text="@string/call_main_gate" />
 
             <View
                 android:layout_width="match_parent"
@@ -187,7 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Call Main Gate for more bus details"
+                android:text="@string/call_main_gate_for_more_bus_details"
                 android:padding="5dp"/>
 
 
