--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
- <group
-     android:checkableBehavior="single">
+
     <group
         android:checkableBehavior="single"
         android:id="@+id/group1">
@@ -9,10 +8,11 @@
 
     <item
         android:id="@+id/home"
-        android:icon="@drawable/home2"
+        android:icon="@drawable/ic_home_black_24dp"
         android:title="Home"
         />
-    <item android:id="@+id/buybuspass" android:title="Buy Bus Pass" />
+    <item
+        android:icon="@drawable/ic_info_black_24dp" android:id="@+id/buybuspass" android:title="Buy Bus Pass" />
     <item android:id="@+id/transactions" android:title="Transactions" />
     <item android:id="@+id/reminder" android:title="Reminder" />
     <item android:id="@+id/busTimePdf" android:title="Bus Time Table" />
@@ -23,12 +23,11 @@
         android:id="@+id/group2">
         <item android:id="@+id/myaccount" android:title="My Account"  />
         <item android:id="@+id/aboutus" android:title="About Us" />
-        <item android:id="@+id/settings" android:title="Settings" />
+        <item android:id="@+id/settings"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="Settings" />
         <item android:id="@+id/logout" android:title="Logout" />
 
     </group>
-
-
-</group>
 
 </menu>
