--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -7,7 +7,11 @@
         android:id="@+id/group1">
 
 
-    <item android:id="@+id/home" android:title="Home" />
+    <item
+        android:id="@+id/home"
+        android:icon="@drawable/home2"
+        android:title="Home"
+        />
     <item android:id="@+id/buybuspass" android:title="Buy Bus Pass" />
     <item android:id="@+id/transactions" android:title="Transactions" />
     <item android:id="@+id/reminder" android:title="Reminder" />
@@ -17,7 +21,7 @@
     <group
         android:checkableBehavior="single"
         android:id="@+id/group2">
-        <item android:id="@+id/myaccount" android:title="My Account" />
+        <item android:id="@+id/myaccount" android:title="My Account"  />
         <item android:id="@+id/aboutus" android:title="About Us" />
         <item android:id="@+id/settings" android:title="Settings" />
         <item android:id="@+id/logout" android:title="Logout" />
